--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,49 @@
                         </li>
                     </ul>
                 </nav>
+                <div class="content">
+                    <ul class="top">
+                        <li>
+                            <h2 class="title">Inbox</h2>
+                            <div class="wrap">
+                                <button type="button">◦◦◦</button>
+                                <ul class="selectMenu">
+                                    <li>
+                                        <button type="button" class="title">Show completed tasks</button>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="list">
+                        <ul>
+                            <li>
+                                <div>
+                                    <input type="checkbox">
+                                    <button type="button" class="title"></button>
+                                    <h3 class="title">today</h3>
+                                    <p class="description">test day</p>
+                                    <p class="dueDate">10/05/2022</p>
+                                </div>
+                                <div class="option">
+                                    <button type="button" class="title"></button>
+                                    <button type="button" class="title"></button>
+                                    <div class="wrap">
+                                        <button type="button">•••</button>
+                                        <ul class="selectMenu">
+                                            <li>
+                                                <button type="button" class="title">Edit project</button>
+                                            </li>
+                                            <li>
+                                                <button type="button" class="title">Delete project</button>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </main>
         </div>
     </body>
