Add addTask container

--- a/src/template.html
+++ b/src/template.html
@@ -52,6 +52,29 @@
                     </ul>
                 </nav>
                 <div class="content">
+                    <div class="overlay">
+                        <form class="addTask">
+                            <label for="taskName">
+                                Task name
+                                <textarea id="taskName" rows="1" ></textarea>
+                            </label>
+                            <label for="descript">
+                                Description
+                                <textarea id="descript" rows="1"></textarea>
+                            </label>
+                            <div>
+                                <div>
+                                    <button type="button" class="date">Today</button>
+                                    <button type="button" class="type">Inbox</button>
+                                    <button type="button" class="priority">Low</button>
+                                </div>
+                                <div>
+                                    <button type="button" class="cancelButton">Cancel</button>
+                                    <button type="submit" class="addButton">Add task</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </main>
         </div>
