--- a/src/template.html
+++ b/src/template.html
@@ -52,7 +52,7 @@
                     </ul>
                 </nav>
                 <div class="content">
-                    <div class="overlay">
+                    <div class="overlay active">
                         <form class="addTask">
                             <label for="taskName">
                                 Task name
@@ -62,13 +62,36 @@
                                 Description
                                 <textarea id="descript" rows="1"></textarea>
                             </label>
-                            <div>
-                                <div>
-                                    <button type="button" class="date">Today</button>
-                                    <button type="button" class="type">Inbox</button>
-                                    <button type="button" class="priority">Low</button>
+                            <div class="buttons">
+                                <div class="datePicker">
+                                    <input class="date" type="date">
                                 </div>
-                                <div>
+                                <div class="timePicker">
+                                    <input class="time" type="time">
+                                </div>
+                                <div class="selectButton">
+                                    <li class="item">
+                                        <div class="wrap">
+                                            <button type="button" class="type title selectMenuButton">Inbox</button>
+                                            <ul class="selectMenu">
+                                                <li>
+                                                    <button type="button" class="">Show completed tasks</button>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </li>
+                                    <li class="item">
+                                        <div class="wrap">
+                                            <button type="button" class="priority title selectMenuButton">Low</button>
+                                            <ul class="selectMenu">
+                                                <li>
+                                                    <button type="button" class="">Show tasks</button>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </li>
+                                </div>
+                                <div class="submitButton">
                                     <button type="button" class="cancelButton">Cancel</button>
                                     <button type="submit" class="addButton">Add task</button>
                                 </div>
