--- a/src/template.html
+++ b/src/template.html
@@ -28,7 +28,7 @@
                     <ul class="productList">
                         <li>
                             <span class="title right">Products</span>
-                            <button type="button" class="addProduct">+</button>
+                            <button type="button" class="createForm" data-form="productForm">+</button>
                         </li>
                     </ul>
                     <ul class="products">
@@ -52,8 +52,7 @@
                     </ul>
                 </nav>
                 <div class="content">
-                    <div class="overlay">
-                    </div>
+                    <div class="overlay"></div>
                 </div>
             </main>
         </div>
