--- a/src/template.html
+++ b/src/template.html
@@ -11,6 +11,7 @@
                 <h1>ToDo List</h1>
             </header>
             <main>
+                <div class="overlay"></div>
                 <nav>
                     <ul class="menu">
                         <li>
@@ -27,8 +28,8 @@
                     </ul>
                     <ul class="productList">
                         <li>
-                            <span class="title right">Products</span>
-                            <button type="button" class="createForm" data-form="productForm">+</button>
+                            <span class="title">Products</span>
+                            <button type="button" class="createProduct" data-form="productForm">+</button>
                         </li>
                     </ul>
                     <ul class="products">
