--- a/src/template.html
+++ b/src/template.html
@@ -26,35 +26,17 @@
                             <span class="title">Upcoming</span>
                         </li>
                     </ul>
-                    <ul class="productList">
+                    <ul class="products">
                         <li>
                             <span class="title">Products</span>
                             <button type="button" class="createProduct" data-form="productForm">+</button>
                         </li>
                     </ul>
-                    <ul class="products">
-                        <li class="item">
-                            <span class="title">test</span>
-                            <div>
-                                <span class="total">4</span>
-                                <div class="wrap">
-                                    <button type="button" class="selectMenuButton">•••</button>
-                                    <ul class="selectMenu">
-                                        <li>
-                                            <button type="button" class="title">Edit project</button>
-                                        </li>
-                                        <li>
-                                            <button type="button" class="title">Delete project</button>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </li>
+                    <ul class="productList">
                     </ul>
                 </nav>
-                <div class="content">
-                    <div class="overlay"></div>
-                </div>
+                <div class="content"></div>
+                
             </main>
         </div>
     </body>
