--- a/src/template.html
+++ b/src/template.html
@@ -14,19 +14,19 @@
                 <div class="overlay"></div>
                 <nav>
                     <ul class="menu">
-                        <li>
+                        <li class="box">
                             <span class="title">Inbox</span>
                             <span class="total">5</span>
                         </li>
-                        <li>
+                        <li class="order">
                             <span class="title">Today</span>
                             <span class="total">4</span>
                         </li>
-                        <li>
+                        <li class="calendar">
                             <span class="title">Upcoming</span>
                         </li>
                     </ul>
-                    <ul class="products">
+                    <ul class="products right">
                         <li>
                             <span class="title">Products</span>
                             <button type="button" class="createProduct" data-form="productForm">+</button>
@@ -41,4 +41,3 @@
         </div>
     </body>
 </html>
-
