--- a/src/template.html
+++ b/src/template.html
@@ -37,7 +37,7 @@
                                 <span class="taskCount">4</span>
 
                         </li>
-                        <li class="products arrowRight arrowDown">
+                        <li class="products arrowRight">
                             <div class="wrap">
                                 <span class="icon"></span>
                                 <span class="title">Products</span>
@@ -47,21 +47,6 @@
                         </li>
                         <li class="productList">
                             <ul>
-                                <li>
-                                    <div class="wrap">
-                                    <span class="icon" style="--product-color:#db4c3f"></span>
-                                    <span class="title">Test</span>
-                                    </div>
-                                    <span class="option">...</span>
-                                    
-                                </li>
-                                <li>
-                                    <div class="wrap">
-                                        <span class="icon" style="--product-color:#db4c3f"></span>
-                                        <span class="title">Test</span>
-                                    </div>
-                                    <span class="option">...</span>
-                                </li>
                             </ul>
                         </li>
                     </ul>
