--- a/src/template.html
+++ b/src/template.html
@@ -11,31 +11,30 @@
                 <h1>ToDo List</h1>
             </header>
             <main>
-                <div class="overlay"></div>
                 <nav>
+                    <div class="overlay"></div>
                     <ul class="menu">
-                        <li class="box">
+                        <li class="item box">
                             <div class="wrap">
                                 <span class="icon"></span>
                                 <span class="title">Inbox</span>
                             </div>
                                 <span class="taskCount">5</span>
                         </li>
-                        <li class="order">
+                        <li class="item order">
                             <div class="wrap">
                                 <span class="icon"></span>
                                 <span class="title">Today</span>
                                 </div>
                                 <span class="taskCount">4</span>
                         </li>
-                        <li class="calendar">
+                        <li class="item calendar">
                             <div class="wrap">
                                 <span class="icon"></span>
                                 <span class="title">Upcoming</span>
                                 </div>
-                                <span class="taskCount">4</span>
                         </li>
-                        <li class="products arrowRight">
+                        <li class="item products arrowRight">
                             <div class="wrap">
                                 <span class="icon"></span>
                                 <span class="title">Products</span>
@@ -43,8 +42,7 @@
                                 <span class="addButton">+</span>
                         </li>
                         <li class="productList">
-                            <ul>
-                            </ul>
+                            <ul></ul>
                         </li>
                     </ul>
                 </nav>
