--- a/src/template.html
+++ b/src/template.html
@@ -14,23 +14,23 @@
                 <div class="overlay"></div>
                 <nav>
                     <ul class="menu">
-                        <li class="item box">
+                        <li class="item ">
                             <div class="wrap">
-                                <span class="icon"></span>
+                                <span class="icon box"></span>
                                 <span class="title">Inbox</span>
                             </div>
                                 <span class="taskCount">5</span>
                         </li>
-                        <li class="item order">
+                        <li class="item ">
                             <div class="wrap">
-                                <span class="icon"></span>
+                                <span class="icon order"></span>
                                 <span class="title">Today</span>
-                                </div>
+                            </div>
                                 <span class="taskCount">4</span>
                         </li>
-                        <li class="item calendar">
+                        <li class="item ">
                             <div class="wrap">
-                                <span class="icon"></span>
+                                <span class="icon calendar"></span>
                                 <span class="title">Upcoming</span>
                                 </div>
                         </li>
