--- a/src/template.html
+++ b/src/template.html
@@ -19,20 +19,14 @@
                                 <span class="icon box"></span>
                                 <span class="title">Inbox</span>
                             </div>
-                                <span class="taskCount">5</span>
+                                <span class="inbox taskCount"></span>
                         </li>
                         <li class="item ">
                             <div class="wrap">
                                 <span class="icon order"></span>
                                 <span class="title">Today</span>
                             </div>
-                                <span class="taskCount">4</span>
-                        </li>
-                        <li class="item ">
-                            <div class="wrap">
-                                <span class="icon calendar"></span>
-                                <span class="title">Upcoming</span>
-                                </div>
+                                <span class="today taskCount"></span>
                         </li>
                         <li class="item products arrowRight">
                             <div class="wrap">
@@ -41,12 +35,14 @@
                                 </div>
                                 <span class="addButton">+</span>
                         </li>
-                        <li class="productList">
+                        <li class="productsList">
                             <ul></ul>
                         </li>
                     </ul>
                 </nav>
-                <div class="content"></div>
+                <div class="content">
+                    <ul class="tasksList"></ul>
+                </div>
             </main>
         </div>
     </body>
