Change the name from Product to Project

--- a/src/template.html
+++ b/src/template.html
@@ -28,14 +28,14 @@
                             </div>
                                 <span class="today taskCount"></span>
                         </li>
-                        <li class="item products arrowRight">
+                        <li class="item projects arrowRight">
                             <div class="wrap">
                                 <span class="icon"></span>
-                                <span class="title">Products</span>
+                                <span class="title">Projects</span>
                                 </div>
                                 <span class="addButton">+</span>
                         </li>
-                        <li class="productsList">
+                        <li class="projectsList">
                             <ul></ul>
                         </li>
                     </ul>
