Refactor the content

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,26 @@
                     </ul>
                 </nav>
                 <div class="content">
-                    <ul class="tasksList"></ul>
+                    <div class="titleBar">
+                        <div class="wrap">
+                            <h2 class="title"></h2>
+                            <button type="button" class="addButton">+</button>
+                        </div>
+                        <div class="option">
+                            <button type="button" class="optionButton">◦◦◦</button>
+                            <ul class="optionList">
+                                <li>
+                                    <button class="setCompleteButton" type="button">Set task to completed</button>
+                                </li>
+                                <li>
+                                    <button class="showTaskButton" type="button">Show completed tasks</button>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <ul class="tasksList">
+                        <div></div>
+                    </ul>
                 </div>
             </main>
         </div>
