--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-    <html lang="en"><head><script defer src="runtime.bundle.js"></script><script defer src="index.bundle.js"></script></head>
+<html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>ToDo List</title>
+    <script defer src="runtime.bundle.js"></script><script defer src="index.bundle.js"></script></head>
     <body>
         <div class="container">
             <header>
@@ -47,10 +48,17 @@
                             <button type="button" class="addButton">+</button>
                         </div>
                         <div class="option">
-                            <button type="button" class="optionButton">◦◦◦</button>
+                            <button type="button" class="optionButton">
+                                ◦◦◦
+                            </button>
                             <ul class="optionList">
                                 <li>
-                                    <button class="showTaskButton" type="button">Show completed tasks</button>
+                                    <button
+                                        class="showTaskButton"
+                                        type="button"
+                                    >
+                                        Show completed tasks
+                                    </button>
                                 </li>
                             </ul>
                         </div>
